--- a/index.html
+++ b/index.html
@@ -10,13 +10,32 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>Business Travel | Navigating Your Corporate Travel World</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>
+      Hudson Business Travel | Navigating Your Corporate Travel World
+    </title>
   </head>
   <body>
+    <header></header>
+    <section>
+      <div class="container">
+        <div class="row question">
+          <div class="col">
+            <h1>Looking for a new travel management company?</h1>
+            <button>Contact Us</button>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
   </body>
+  <footer></footer>
 </html>
