added hero image and nav menu. started styling

--- a/index.html
+++ b/index.html
@@ -14,23 +14,72 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>
       Hudson Business Travel | Navigating Your Corporate Travel World
     </title>
   </head>
   <body>
-    <header></header>
-    <section>
-      <div class="container">
-        <div class="row question">
-          <div class="col">
-            <h1>Looking for a new travel management company?</h1>
-            <button>Contact Us</button>
+    <header>
+      <div class="container-fluid">
+        <div class="row">
+          <!--navigation menu section -->
+          <nav class="navbar navbar-expand-lg nav-menu">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Hudson Business Travel</a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav justify-content-end">
+                  <li class="nav-item menu-item">
+                    <a class="nav-link active" aria-current="page" href="#"
+                      >Home</a
+                    >
+                  </li>
+                  <li class="nav-item menu-item">
+                    <a class="nav-link" href="#">What We Do</a>
+                  </li>
+                  <li class="nav-item menu-item">
+                    <a class="nav-link" href="#">Sustainability</a>
+                  </li>
+                  <li class="nav-item menu-item">
+                    <a class="nav-link" href="#">Who Are We</a>
+                  </li>
+                  <li class="nav-item menu-item">
+                    <a class="nav-link" href="#">Contact Us</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
+          <!--Hero Image-->
+          <div class="col hero-img">
+            <!--Question section-->
+            <h1 class="bebas-neue question-section d-flex align-items-center">
+              Looking for a new travel management company?
+            </h1>
+            <!--Button to contact us-->
+            <a
+              href="#"
+              class="btn btn-outline-dark btn-lg question-button"
+              type="button"
+              >Contact Us</a
+            >
           </div>
         </div>
       </div>
-    </section>
+    </header>
+    <section></section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
