--- a/index.html
+++ b/index.html
@@ -96,7 +96,45 @@
         </div>
       </div>
     </header>
-
+    <div class="container-flex">
+      <div class="row why-section why-section-bg-color text-center pt-5 pb-5">
+        <div class="col-12">
+          <h3>Why Choose Hudson Business Travel</h3>
+        </div>
+      </div>
+    </div>
+    <div class="row why-section why-section-bg-color pb-5 ps-5 pe-5">
+      <div class="col-3 duty-of-care">
+        <h5>Duty of Care</h5>
+        <p>
+          Our duty of care includes 24/7 in-house support and comprehensive
+          traveller tracking, ensuring safety and peace of mind for every
+          journey.
+        </p>
+      </div>
+      <div class="col-3 saving">
+        <h5>Savings</h5>
+        <p>
+          We offer exceptional savings through our extensive range of negotiated
+          airline fares and hotel rates, ensuring the best value for your travel
+          expenses.
+        </p>
+      </div>
+      <div class="col-3 sustainable">
+        <h5>Sustainable</h5>
+        <p>
+          We are dedicated to sustainable travel, actively working to minimise
+          our environmental impact and promote responsible tourism practices.
+        </p>
+      </div>
+      <div class="col-3 technology">
+        <h5>Technology</h5>
+        <p>
+          Our cutting-edge technology provides superior reporting and booking
+          tools, ensuring a seamless and efficient travel management experience.
+        </p>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -107,7 +145,7 @@
     <div class="container-fluid">
       <div class="row" id="footer-details">
         <div class="col contact-hours-info">
-          <h3>Contact Us</h3>
+          <h4>Contact Us</h4>
           <p>Our office is open Monday to Friday from 8:00 to 18:00</p>
           <p>24/7 emergency contact number <span>+44 (0) 20 3058 231</span></p>
           <p>Email: action@hudsontravel.co.uk</p>
