fixed the button style and font colours

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
           <!--navigation menu section -->
           <nav class="navbar sticky-top navbar-expand-lg nav-menu">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Hudson Business Travel</a>
+              <a class="navbar-brand logo-section" href="#"
+                >Hudson Business Travel</a
+              >
               <button
                 class="navbar-toggler hamburger-menu"
                 type="button"
@@ -86,7 +88,7 @@
               <div class="div d-grid-2 d-md-flex justify-content-md-end">
                 <a
                   href="#"
-                  class="btn btn-outline-dark btn-lg question-button bt-end"
+                  class="btn btn-lg question-button bt-end"
                   type="button"
                   >Contact Us</a
                 >
@@ -120,8 +122,8 @@
           expenses.
         </p>
       </div>
-      <div class="col-3 sustainable">
-        <h5>Sustainable</h5>
+      <div class="col-3 sustainability">
+        <h5>Sustainability</h5>
         <p>
           We are dedicated to sustainable travel, actively working to minimise
           our environmental impact and promote responsible tourism practices.
@@ -154,7 +156,7 @@
         <div class="col d-flex justify-content-end align-items-center pt-4">
           <ul class="list-inline social-links">
             <li class="list-inline-item">
-              <a href="#" target="_blank">
+              <a href="https://www.facebook.com/" target="_blank">
                 <i
                   class="fa-brands fa-facebook-f facebook-color"
                   aria-hidden="true"
@@ -163,7 +165,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#" target="_blank">
+              <a href="https://www.instagram.com/" target="_blank">
                 <i
                   class="fa-brands fa-instagram instagram-color"
                   aria-hidden="true"
@@ -173,7 +175,7 @@
             </li>
 
             <li class="list-inline-item">
-              <a href="#" target="_blank">
+              <a href="https://www.linkedin.com/feed/" target="_blank">
                 <i
                   class="fa-brands fa-linkedin linkedin-color"
                   aria-hidden="true"
@@ -182,7 +184,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#" target="_blank">
+              <a href="https://www.youtube.com/" target="_blank">
                 <i
                   class="fa-brands fa-youtube youtube-color"
                   aria-hidden="true"
