fixed up some styling issues with navbar and hero image

--- a/index.html
+++ b/index.html
@@ -26,73 +26,70 @@
 
   <body>
     <header>
-      <div class="container-fluid">
-        <div class="row">
-          <!--navigation menu section -->
-          <nav class="navbar sticky-top navbar-expand-lg nav-menu">
-            <div class="container-fluid">
-              <a class="navbar-brand logo-section" href="#"
-                >Hudson Business Travel</a
-              >
-              <button
-                class="navbar-toggler hamburger-menu"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon hamburger-menu"></span>
-              </button>
-              <div
-                class="collapse navbar-collapse justify-content-end"
-                id="navbarNav"
-              >
-                <ul class="navbar-nav justify-content-end">
-                  <li class="nav-item menu-item">
-                    <a
-                      class="nav-link menu-item active"
-                      aria-current="page"
-                      href="#"
-                      >Home</a
-                    >
-                  </li>
-                  <li class="nav-item menu-item">
-                    <a class="nav-link what-we-do" href="#">What We Do</a>
-                  </li>
-                  <li class="nav-item menu-item">
-                    <a class="nav-link sustainability" href="#"
-                      >Sustainability</a
-                    >
-                  </li>
-                  <li class="nav-item who-are-we menu-item">
-                    <a class="nav-link" href="#">Who Are We</a>
-                  </li>
-                  <li class="nav-item menu-item">
-                    <a class="nav-link contact-us" href="#">Contact Us</a>
-                  </li>
-                </ul>
-              </div>
+      <div class="container-fluid sticky-top nav-menu">
+        <!--navigation menu section -->
+        <nav class="navbar navbar-expand-lg">
+          <div class="container-fluid">
+            <a class="navbar-brand logo-section" href="#"
+              >Hudson Business Travel</a
+            >
+            <button
+              class="navbar-toggler hamburger-menu"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon hamburger-menu"></span>
+            </button>
+            <div
+              class="collapse navbar-collapse justify-content-end"
+              id="navbarNav"
+            >
+              <ul class="navbar-nav justify-content-end">
+                <li class="nav-item menu-item">
+                  <a
+                    class="nav-link menu-item active"
+                    aria-current="page"
+                    href="#"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item menu-item">
+                  <a class="nav-link what-we-do" href="#">What We Do</a>
+                </li>
+                <li class="nav-item menu-item">
+                  <a class="nav-link sustainability" href="#">Sustainability</a>
+                </li>
+                <li class="nav-item who-are-we menu-item">
+                  <a class="nav-link" href="#">Who Are We</a>
+                </li>
+                <li class="nav-item menu-item">
+                  <a class="nav-link contact-us" href="#">Contact Us</a>
+                </li>
+              </ul>
             </div>
-          </nav>
-
-          <!--Hero Image-->
-          <div class="row">
-            <div class="col hero-img">
-              <!--Question section-->
-              <h1 class="question-section text-end">
-                Looking for a new travel management company?
-              </h1>
-              <!--Button to contact us-->
-              <div class="div d-grid-2 d-md-flex justify-content-md-end">
-                <a
-                  href="#"
-                  class="btn btn-lg question-button bt-end"
-                  type="button"
-                  >Contact Us</a
-                >
-              </div>
+          </div>
+        </nav>
+      </div>
+      <!--Hero Image-->
+      <div class="container-fluid hero-img">
+        <div class="row">
+          <div class="col">
+            <!--Question section-->
+            <h1 class="question-section text-end">
+              Looking for a new travel management company?
+            </h1>
+            <!--Button to contact us-->
+            <div class="div d-grid-2 d-md-flex justify-content-md-end">
+              <a
+                href="#"
+                class="btn btn-lg question-button bt-end"
+                type="button"
+                >Contact Us</a
+              >
             </div>
           </div>
         </div>
