--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
       </div>
       <!--Hero Image-->
       <div class="container-fluid hero-img">
-        <div class="row">
-          <div class="col">
+        <div class="row hero-content">
+          <div class="col-6 justify-content-end">
             <!--Question section-->
             <h1 class="question-section text-end">
               Looking for a new travel management company?
@@ -103,7 +103,7 @@
       </div>
     </div>
     <div class="row why-section why-section-bg-color pb-5 ps-5 pe-5">
-      <div class="col-3 duty-of-care">
+      <div class="col-12 col-md-6 col-lg-3 duty-of-care">
         <h5>Duty of Care</h5>
         <p>
           Our duty of care includes 24/7 in-house support and comprehensive
@@ -111,7 +111,7 @@
           journey.
         </p>
       </div>
-      <div class="col-3 saving">
+      <div class="col-12 col-md-6 col-lg-3 saving">
         <h5>Savings</h5>
         <p>
           We offer exceptional savings through our extensive range of negotiated
@@ -119,14 +119,14 @@
           expenses.
         </p>
       </div>
-      <div class="col-3 sustainability">
+      <div class="col-12 col-md-6 col-lg-3 sustainability">
         <h5>Sustainability</h5>
         <p>
           We are dedicated to sustainable travel, actively working to minimise
           our environmental impact and promote responsible tourism practices.
         </p>
       </div>
-      <div class="col-3 technology">
+      <div class="col-12 col-md-6 col-lg-3 technology">
         <h5>Technology</h5>
         <p>
           Our cutting-edge technology provides superior reporting and booking
@@ -143,14 +143,16 @@
   <footer>
     <div class="container-fluid">
       <div class="row" id="footer-details">
-        <div class="col contact-hours-info">
+        <div class="col-12 col-md-6 contact-hours-info">
           <h4>Contact Us</h4>
           <p>Our office is open Monday to Friday from 8:00 to 18:00</p>
           <p>24/7 emergency contact number <span>+44 (0) 20 3058 231</span></p>
           <p>Email: action@hudsontravel.co.uk</p>
         </div>
 
-        <div class="col d-flex justify-content-end align-items-center pt-4">
+        <div
+          class="col-12 col-md-6 d-flex justify-content-sm-center justify-content-md-end align-items-center pt-4 social-icons"
+        >
           <ul class="list-inline social-links">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/" target="_blank">
