working on question section styling

--- a/index.html
+++ b/index.html
@@ -79,22 +79,25 @@
         <div class="row hero-content">
           <div class="col-6 justify-content-end">
             <!--Question section-->
-            <h1 class="question-section text-end">
-              Looking for a new travel management company?
-            </h1>
-            <!--Button to contact us-->
-            <div class="div d-grid-2 d-md-flex justify-content-md-end">
-              <a
-                href="#"
-                class="btn btn-lg question-button bt-end"
-                type="button"
-                >Contact Us</a
-              >
+            <div class="question-container">
+              <h1 class="question-section text-end">
+                Looking for a new travel management company?
+              </h1>
+              <!--Button to contact us-->
+              <div class="div d-grid-2 d-md-flex justify-content-md-end">
+                <a
+                  href="#"
+                  class="btn btn-lg question-button bt-end"
+                  type="button"
+                  >Contact Us</a
+                >
+              </div>
             </div>
           </div>
         </div>
       </div>
     </header>
+    <!--Why section-->
     <div class="container-flex">
       <div class="row why-section why-section-bg-color text-center pt-5 pb-5">
         <div class="col-12">
@@ -141,7 +144,9 @@
     ></script>
   </body>
   <footer>
+    <!--Footer section-->
     <div class="container-fluid">
+      <!--Contact details & hours section-->
       <div class="row" id="footer-details">
         <div class="col-12 col-md-6 contact-hours-info">
           <h4>Contact Us</h4>
@@ -149,7 +154,7 @@
           <p>24/7 emergency contact number <span>+44 (0) 20 3058 231</span></p>
           <p>Email: action@hudsontravel.co.uk</p>
         </div>
-
+        <!--Socail icons-->
         <div
           class="col-12 col-md-6 d-flex justify-content-sm-center justify-content-md-end align-items-center pt-4 social-icons"
         >
