--- a/contact-us.html
+++ b/contact-us.html
@@ -48,12 +48,7 @@
           >
             <ul class="navbar-nav justify-content-end">
               <li class="nav-item menu-item home">
-                <a
-                  class="nav-link menu-item active"
-                  aria-current="page"
-                  href="index.html"
-                  >Home</a
-                >
+                <a class="nav-link menu-item" href="index.html">Home</a>
               </li>
               <li class="nav-item menu-item what-we-do">
                 <a class="nav-link" href="what-we-do.html">What We Do</a>
@@ -67,7 +62,12 @@
                 <a class="nav-link" href="who-are-we.html">Who Are We</a>
               </li>
               <li class="nav-item menu-item contact-us">
-                <a class="nav-link" href="contact-us.html">Contact Us</a>
+                <a
+                  class="nav-link active"
+                  href="contact-us.html"
+                  aria-current="page"
+                  >Contact Us</a
+                >
               </li>
             </ul>
           </div>
@@ -86,7 +86,7 @@
             <!--Button to contact us-->
             <div class="div d-grid-2 d-md-flex justify-content-md-end">
               <a
-                href="contact-us.html"
+                href="#"
                 class="btn btn-lg question-button bt-end"
                 type="button"
                 >Contact Us</a
@@ -97,53 +97,8 @@
       </div>
     </div>
   </header>
-  <body>
-    <!--Why section-->
-    <div class="container-flex">
-      <div class="row why-section why-section-bg-color text-center pt-5 pb-5">
-        <div class="col-12">
-          <h3>Why Choose Hudson Business Travel</h3>
-        </div>
-      </div>
-    </div>
-    <div class="row why-section why-section-bg-color pb-5 ps-5 pe-5">
-      <div class="col-12 col-md-6 col-lg-3 duty-of-care">
-        <h5>Duty of Care</h5>
-        <p>
-          Our duty of care includes 24/7 in-house support and comprehensive
-          traveller tracking, ensuring safety and peace of mind for every
-          journey.
-        </p>
-      </div>
-      <div class="col-12 col-md-6 col-lg-3 saving">
-        <h5>Savings</h5>
-        <p>
-          We offer exceptional savings through our extensive range of negotiated
-          airline fares and hotel rates, ensuring the best value for your travel
-          expenses.
-        </p>
-      </div>
-      <div class="col-12 col-md-6 col-lg-3 sustainability">
-        <h5>Sustainability</h5>
-        <p>
-          We are dedicated to sustainable travel, actively working to minimise
-          our environmental impact and promote responsible tourism practices.
-        </p>
-      </div>
-      <div class="col-12 col-md-6 col-lg-3 technology">
-        <h5>Technology</h5>
-        <p>
-          Our cutting-edge technology provides superior reporting and booking
-          tools, ensuring a seamless and efficient travel management experience.
-        </p>
-      </div>
-    </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+
+  <body></body>
   <footer>
     <!--Footer section-->
     <div class="container-fluid">
