--- a/index.html
+++ b/index.html
@@ -23,81 +23,82 @@
       Hudson Business Travel | Navigating Your Corporate Travel World
     </title>
   </head>
-  <header>
-    <div class="container-fluid sticky-top nav-menu">
-      <!--navigation menu section -->
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand logo-section" href="index.html"
-            >Hudson Business Travel</a
-          >
-          <button
-            class="navbar-toggler hamburger-menu"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon hamburger-menu"></span>
-          </button>
-          <div
-            class="collapse navbar-collapse justify-content-end"
-            id="navbarNav"
-          >
-            <ul class="navbar-nav justify-content-end">
-              <li class="nav-item menu-item home">
-                <a
-                  class="nav-link menu-item active"
-                  aria-current="page"
-                  href="index.html"
-                  >Home</a
-                >
-              </li>
-              <li class="nav-item menu-item what-we-do">
-                <a class="nav-link" href="what-we-do.html">What We Do</a>
-              </li>
-              <li class="nav-item menu-item sustainability">
-                <a class="nav-link" href="sustainability.html"
-                  >Sustainability</a
-                >
-              </li>
-              <li class="nav-item menu-item who-are-we">
-                <a class="nav-link" href="who-are-we.html">Who Are We</a>
-              </li>
-              <li class="nav-item menu-item contact-us">
-                <a class="nav-link" href="contact-us.html">Contact Us</a>
-              </li>
-            </ul>
+  <body>
+    <header>
+      <div class="container-fluid sticky-top nav-menu">
+        <!--navigation menu section -->
+        <nav class="navbar navbar-expand-lg">
+          <div class="container-fluid">
+            <a class="navbar-brand logo-section" href="index.html"
+              >Hudson Business Travel</a
+            >
+            <button
+              class="navbar-toggler hamburger-menu"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon hamburger-menu"></span>
+            </button>
+            <div
+              class="collapse navbar-collapse justify-content-end"
+              id="navbarNav"
+            >
+              <ul class="navbar-nav justify-content-end">
+                <li class="nav-item menu-item home">
+                  <a
+                    class="nav-link menu-item active"
+                    aria-current="page"
+                    href="index.html"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item menu-item what-we-do">
+                  <a class="nav-link" href="what-we-do.html">What We Do</a>
+                </li>
+                <li class="nav-item menu-item sustainability">
+                  <a class="nav-link" href="sustainability.html"
+                    >Sustainability</a
+                  >
+                </li>
+                <li class="nav-item menu-item who-are-we">
+                  <a class="nav-link" href="who-are-we.html">Who Are We</a>
+                </li>
+                <li class="nav-item menu-item contact-us">
+                  <a class="nav-link" href="contact-us.html">Contact Us</a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </nav>
-    </div>
-    <!--Hero Image-->
-    <div class="container-fluid hero-img">
-      <div class="row hero-content">
-        <div class="col-6 justify-content-end">
-          <!--Question section-->
-          <div class="question-container">
-            <h1 class="question-section text-end">
-              Looking for a new travel management company?
-            </h1>
-            <!--Button to contact us-->
-            <div class="div d-grid-2 d-md-flex justify-content-md-end">
-              <a
-                href="contact-us.html"
-                class="btn btn-lg question-button bt-end"
-                type="button"
-                >Contact Us</a
-              >
+        </nav>
+      </div>
+      <!--Hero Image-->
+      <div class="container-fluid hero-img-home">
+        <div class="row hero-content">
+          <div class="col-6 justify-content-end">
+            <!--Question section-->
+            <div class="question-container">
+              <h1 class="question-section text-end">
+                Looking for a new travel management company?
+              </h1>
+              <!--Button to contact us-->
+              <div class="div d-grid-2 d-md-flex justify-content-md-end">
+                <a
+                  href="contact-us.html"
+                  class="btn btn-lg question-button bt-end"
+                  type="button"
+                  >Contact Us</a
+                >
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </header>
-  <body>
+    </header>
+
     <!--Why section-->
     <div class="container-flex">
       <div class="row why-section why-section-bg-color text-center pt-5 pb-5">
@@ -138,68 +139,71 @@
         </p>
       </div>
     </div>
+
+    <footer>
+      <!--Footer section-->
+      <div class="container-fluid">
+        <!--Contact details & hours section-->
+        <div class="row" id="footer-details">
+          <div class="col-12 col-md-6 contact-hours-info">
+            <h4>Contact Us</h4>
+            <p>Our office is open Monday to Friday from 8:00 to 18:00</p>
+            <p>
+              24/7 emergency contact number <span>+44 (0) 20 3058 231</span>
+            </p>
+            <p>Email: action@hudsontravel.co.uk</p>
+          </div>
+          <!--Socail icons-->
+          <div
+            class="col-12 col-md-6 d-flex justify-content-sm-center justify-content-md-end align-items-center pt-4 social-icons"
+          >
+            <ul class="list-inline social-links">
+              <li class="list-inline-item">
+                <a href="https://www.facebook.com/" target="_blank">
+                  <i
+                    class="fa-brands fa-facebook-f facebook-color"
+                    aria-hidden="true"
+                  ></i>
+                  <span class="sr-only">Facebook</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.instagram.com/" target="_blank">
+                  <i
+                    class="fa-brands fa-instagram instagram-color"
+                    aria-hidden="true"
+                  ></i>
+                  <span class="sr-only">Instagram</span>
+                </a>
+              </li>
+
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/feed/" target="_blank">
+                  <i
+                    class="fa-brands fa-linkedin linkedin-color"
+                    aria-hidden="true"
+                  ></i>
+                  <span class="sr-only">LinkedIn</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.youtube.com/" target="_blank">
+                  <i
+                    class="fa-brands fa-youtube youtube-color"
+                    aria-hidden="true"
+                  ></i>
+                  <span class="sr-only">YouTube</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
   </body>
-  <footer>
-    <!--Footer section-->
-    <div class="container-fluid">
-      <!--Contact details & hours section-->
-      <div class="row" id="footer-details">
-        <div class="col-12 col-md-6 contact-hours-info">
-          <h4>Contact Us</h4>
-          <p>Our office is open Monday to Friday from 8:00 to 18:00</p>
-          <p>24/7 emergency contact number <span>+44 (0) 20 3058 231</span></p>
-          <p>Email: action@hudsontravel.co.uk</p>
-        </div>
-        <!--Socail icons-->
-        <div
-          class="col-12 col-md-6 d-flex justify-content-sm-center justify-content-md-end align-items-center pt-4 social-icons"
-        >
-          <ul class="list-inline social-links">
-            <li class="list-inline-item">
-              <a href="https://www.facebook.com/" target="_blank">
-                <i
-                  class="fa-brands fa-facebook-f facebook-color"
-                  aria-hidden="true"
-                ></i>
-                <span class="sr-only">Facebook</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.instagram.com/" target="_blank">
-                <i
-                  class="fa-brands fa-instagram instagram-color"
-                  aria-hidden="true"
-                ></i>
-                <span class="sr-only">Instagram</span>
-              </a>
-            </li>
-
-            <li class="list-inline-item">
-              <a href="https://www.linkedin.com/feed/" target="_blank">
-                <i
-                  class="fa-brands fa-linkedin linkedin-color"
-                  aria-hidden="true"
-                ></i>
-                <span class="sr-only">LinkedIn</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.youtube.com/" target="_blank">
-                <i
-                  class="fa-brands fa-youtube youtube-color"
-                  aria-hidden="true"
-                ></i>
-                <span class="sr-only">YouTube</span>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer>
 </html>
