finished styling the what-we-do.html

--- a/what-we-do.html
+++ b/what-we-do.html
@@ -23,7 +23,7 @@
       Hudson Business Travel | Navigating Your Corporate Travel World
     </title>
   </head>
-  <body>
+  <body class="what-heading-bg-color">
     <header>
       <div class="container-fluid sticky-top nav-menu">
         <!--navigation menu section -->
@@ -80,9 +80,9 @@
     </header>
     <section>
       <div class="container-fluid">
-        <div class="row what-heading-bg-color justify-content-center pt-5 pb-5">
+        <div class="row justify-content-center pt-5 pb-5">
           <div
-            class="col-6 what-heading-section what-heading-bg-color text-center"
+            class="col-12 col-md-12 col-lg-6 what-heading-section text-center"
           >
             <h1>What We Do</h1>
             <p>
@@ -98,14 +98,35 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid what-heading-bg-color">
-        <div class="row justify-content-center">
-          <div class="col-2 corp-travel"><h3></h3></div>
-          <div class="col-2 private-jet-travel"></div>
-          <div class="col-2 marine-travel"></div>
-          <div class="col-2 group-travel"></div>
-          <div class="col-2 meeting-room"></div>
-          <div class="col-2 visa-travel"></div>
+      <div class="container-fluid expertise-section">
+        <div class="row">
+          <div class="col expertise-section text-center">
+            <h3>Expertise</h3>
+            <p>
+              We offer a range of specialised services, covering a range of
+              industries.
+            </p>
+          </div>
+        </div>
+        <div class="row justify-content-center mb-5 expertise-section">
+          <div class="col-2 col-md-6 corp-travel">
+            <div class="expertise-text"><h5>Corporate Travel</h5></div>
+          </div>
+          <div class="col-2 col-md-6 private-jet-travel">
+            <div class="expertise-text"><h5>Private Jets</h5></div>
+          </div>
+          <div class="col-2 col-md-6 marine-travel">
+            <div class="expertise-text"><h5>Marine & Oil</h5></div>
+          </div>
+          <div class="col-2 col-md-6 group-travel">
+            <div class="expertise-text"><h5>Groups</h5></div>
+          </div>
+          <div class="col-2 col-md-6 meeting-room">
+            <div class="expertise-text"><h5>Meeting Rooms</h5></div>
+          </div>
+          <div class="col-2 col-md-6 visa-travel">
+            <div class="expertise-text"><h5>Visa</h5></div>
+          </div>
         </div>
       </div>
     </section>
