added staff images and vision and value content

--- a/who-are-we.html
+++ b/who-are-we.html
@@ -23,138 +23,231 @@
       Hudson Business Travel | Navigating Your Corporate Travel World
     </title>
   </head>
-  <header>
-    <div class="container-fluid sticky-top nav-menu">
-      <!--navigation menu section -->
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand logo-section" href="index.html"
-            >Hudson Business Travel</a
-          >
-          <button
-            class="navbar-toggler hamburger-menu"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon hamburger-menu"></span>
-          </button>
-          <div
-            class="collapse navbar-collapse justify-content-end"
-            id="navbarNav"
-          >
-            <ul class="navbar-nav justify-content-end">
-              <li class="nav-item menu-item home">
-                <a class="nav-link menu-item" href="index.html">Home</a>
-              </li>
-              <li class="nav-item menu-item hat-we-do">
-                <a class="nav-link w" href="what-we-do.html">What We Do</a>
-              </li>
-              <li class="nav-item menu-item sustainability">
-                <a class="nav-link" href="sustainability.html"
-                  >Sustainability</a
-                >
-              </li>
-              <li class="nav-item menu-item who-are-we">
-                <a
-                  class="nav-link active"
-                  href="who-are-we.html"
-                  aria-current="page"
-                  >Who Are We</a
-                >
-              </li>
-              <li class="nav-item menu-item contact-us">
-                <a class="nav-link" href="contact-us.html">Contact Us</a>
-              </li>
-            </ul>
+  <body class="who-are-we-section">
+    <header>
+      <div class="container-fluid sticky-top nav-menu">
+        <!--navigation menu section -->
+        <nav class="navbar navbar-expand-lg">
+          <div class="container-fluid">
+            <a class="navbar-brand logo-section" href="index.html"
+              >Hudson Business Travel</a
+            >
+            <button
+              class="navbar-toggler hamburger-menu"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon hamburger-menu"></span>
+            </button>
+            <div
+              class="collapse navbar-collapse justify-content-end"
+              id="navbarNav"
+            >
+              <ul class="navbar-nav justify-content-end">
+                <li class="nav-item menu-item home">
+                  <a class="nav-link menu-item" href="index.html">Home</a>
+                </li>
+                <li class="nav-item menu-item hat-we-do">
+                  <a class="nav-link w" href="what-we-do.html">What We Do</a>
+                </li>
+                <li class="nav-item menu-item sustainability">
+                  <a class="nav-link" href="sustainability.html"
+                    >Sustainability</a
+                  >
+                </li>
+                <li class="nav-item menu-item who-are-we">
+                  <a
+                    class="nav-link active"
+                    href="who-are-we.html"
+                    aria-current="page"
+                    >Who Are We</a
+                  >
+                </li>
+                <li class="nav-item menu-item contact-us">
+                  <a class="nav-link" href="contact-us.html">Contact Us</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+      <!--Hero Image-->
+      <div class="container-fluid hero-img-who"></div>
+    </header>
+
+    <!--portrait section-->
+    <section class="who-are-we-section">
+      <div class="container">
+        <div class="row justify-content-center mt-4 mb-5">
+          <div class="col-12 col-md-4 col-lg-3 ceo-img">
+            <img
+              src="assets/images/ceo.jpeg"
+              alt="Image of the CEO"
+              class="staff-portrait"
+            />
+          </div>
+          <div class="col-12 col-md-4 col-lg-3 cfo-img">
+            <img
+              src="assets/images/cfo.jpeg"
+              alt="Image of the CFO"
+              class="staff-portrait"
+            />
+          </div>
+          <div class="col-12 col-md-4 col-lg-3 hoops-img">
+            <img
+              src="assets/images/head-of-ops.jpg"
+              alt="Image of the Head of Operations"
+              class="staff-portrait"
+            />
+          </div>
+          <div class="col-12 col-md-4 col-lg-3 hoaacc-img">
+            <img
+              src="assets/images/head-of-accounts.jpeg"
+              alt="Image of the Head of Accounts"
+              class="staff-portrait"
+            />
+          </div>
+          <div class="col-12 col-md-4 col-lg-3 hoacc-man-ing">
+            <img
+              src="assets/images/head-of-account-managment.jpeg"
+              alt="Image of the Head of Account Management"
+              class="staff-portrait"
+            />
+          </div>
+          <div class="col-12 col-md-4 col-lg-3 hocom">
+            <img
+              src="assets/images/head-of-commerrcials.jpeg"
+              alt="Image of the Head of Commercials"
+              class="staff-portrait"
+            />
           </div>
         </div>
-      </nav>
-    </div>
-    <!--Hero Image-->
-    <div class="container-fluid hero-img">
-      <div class="row hero-content">
-        <div class="col-6 justify-content-end">
-          <!--Question section-->
-          <div class="question-container">
-            <h1 class="question-section text-end">
-              Looking for a new travel management company?
-            </h1>
-            <!--Button to contact us-->
-            <div class="div d-grid-2 d-md-flex justify-content-md-end">
-              <a
-                href="#"
-                class="btn btn-lg question-button bt-end"
-                type="button"
-                >Contact Us</a
-              >
+      </div>
+    </section>
+    <!--our visioin and values section-->
+    <section class="our-vision-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-6 vision-section">
+            <h3>Our Vision</h3>
+            <p>
+              Our vision is to become the epitome of innovation in business
+              travel, transforming how professionals travel across the globe. We
+              aim to create a harmonious blend of luxury, and efficiency in
+              travel, making every trip an exemplary experience. By foreseeing
+              and adapting to the dynamic needs of our clients, we aspire to
+              craft travel solutions that are not only effective but also serve
+              as a benchmark for excellence and environmental stewardship in the
+              industry.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 offset-lg-6">
+            <div class="row">
+              <div class="col-12 col-lg-6 values-section">
+                <h3>Our Values</h3>
+              </div>
+              <div class="row">
+                <div class="col-12 col-lg-6 values-content">
+                  <p>
+                    Customer-Centricity: Prioritizing the needs and preferences
+                    of our clients, we are dedicated to delivering personalized
+                    and responsive service, ensuring that every travel
+                    experience is tailored to individual requirements.
+                  </p>
+                </div>
+                <div class="col-12 col-lg-6 values-content">
+                  <p>
+                    Innovation: Continuously seeking out and adopting the latest
+                    advancements in travel technology and services to provide
+                    cutting-edge solutions that enhance the travel experience.
+                  </p>
+                </div>
+                <div class="col-12 col-lg-6 values-content">
+                  <p>
+                    Integrity: Upholding the highest standards of honesty and
+                    transparency in all our dealings, fostering trust and
+                    long-lasting relationships with our clients and partners.
+                  </p>
+                </div>
+                <div class="col-12 col-lg-6 values-content">
+                  <p>
+                    Collaboration: Believing in the power of teamwork and
+                    partnership, we work closely with our clients, suppliers,
+                    and colleagues to create mutually beneficial relationships
+                    and achieve shared goals in the realm of business travel.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </header>
+    </section>
+    <footer>
+      <!--Footer section-->
+      <div class="container-fluid">
+        <!--Contact details & hours section-->
+        <div class="row" id="footer-details">
+          <div class="col-12 col-md-6 contact-hours-info">
+            <h4>Contact Us</h4>
+            <p>Our office is open Monday to Friday from 8:00 to 18:00</p>
+            <p>
+              24/7 emergency contact number <span>+44 (0) 20 3058 231</span>
+            </p>
+            <p>Email: action@hudsontravel.co.uk</p>
+          </div>
+          <!--Socail icons-->
+          <div
+            class="col-12 col-md-6 d-flex justify-content-sm-center justify-content-md-end align-items-center pt-4 social-icons"
+          >
+            <ul class="list-inline social-links">
+              <li class="list-inline-item">
+                <a href="https://www.facebook.com/" target="_blank">
+                  <i
+                    class="fa-brands fa-facebook-f facebook-color"
+                    aria-hidden="true"
+                  ></i>
+                  <span class="sr-only">Facebook</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.instagram.com/" target="_blank">
+                  <i
+                    class="fa-brands fa-instagram instagram-color"
+                    aria-hidden="true"
+                  ></i>
+                  <span class="sr-only">Instagram</span>
+                </a>
+              </li>
 
-  <body></body>
-  <footer>
-    <!--Footer section-->
-    <div class="container-fluid">
-      <!--Contact details & hours section-->
-      <div class="row" id="footer-details">
-        <div class="col-12 col-md-6 contact-hours-info">
-          <h4>Contact Us</h4>
-          <p>Our office is open Monday to Friday from 8:00 to 18:00</p>
-          <p>24/7 emergency contact number <span>+44 (0) 20 3058 231</span></p>
-          <p>Email: action@hudsontravel.co.uk</p>
-        </div>
-        <!--Socail icons-->
-        <div
-          class="col-12 col-md-6 d-flex justify-content-sm-center justify-content-md-end align-items-center pt-4 social-icons"
-        >
-          <ul class="list-inline social-links">
-            <li class="list-inline-item">
-              <a href="https://www.facebook.com/" target="_blank">
-                <i
-                  class="fa-brands fa-facebook-f facebook-color"
-                  aria-hidden="true"
-                ></i>
-                <span class="sr-only">Facebook</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.instagram.com/" target="_blank">
-                <i
-                  class="fa-brands fa-instagram instagram-color"
-                  aria-hidden="true"
-                ></i>
-                <span class="sr-only">Instagram</span>
-              </a>
-            </li>
-
-            <li class="list-inline-item">
-              <a href="https://www.linkedin.com/feed/" target="_blank">
-                <i
-                  class="fa-brands fa-linkedin linkedin-color"
-                  aria-hidden="true"
-                ></i>
-                <span class="sr-only">LinkedIn</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.youtube.com/" target="_blank">
-                <i
-                  class="fa-brands fa-youtube youtube-color"
-                  aria-hidden="true"
-                ></i>
-                <span class="sr-only">YouTube</span>
-              </a>
-            </li>
-          </ul>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/feed/" target="_blank">
+                  <i
+                    class="fa-brands fa-linkedin linkedin-color"
+                    aria-hidden="true"
+                  ></i>
+                  <span class="sr-only">LinkedIn</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.youtube.com/" target="_blank">
+                  <i
+                    class="fa-brands fa-youtube youtube-color"
+                    aria-hidden="true"
+                  ></i>
+                  <span class="sr-only">YouTube</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
+  </body>
 </html>
