working on images in who we are

--- a/who-are-we.html
+++ b/who-are-we.html
@@ -83,47 +83,71 @@
     <section class="who-are-we-section">
       <div class="container">
         <div class="row justify-content-center mt-4 mb-5">
-          <div class="col-12 col-md-4 col-lg-3 ceo-img">
+          <div class="col-12 col-md-4 col-lg-3 ceo-img staff-member">
             <img
               src="assets/images/ceo.jpeg"
               alt="Image of the CEO"
               class="staff-portrait"
             />
+            <div class="staff-names">
+              <h5>Victoria Grayson</h5>
+              <p>CEO</p>
+            </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3 cfo-img">
+          <div class="col-12 col-md-4 col-lg-3 cfo-img staff-member">
             <img
               src="assets/images/cfo.jpeg"
               alt="Image of the CFO"
               class="staff-portrait"
             />
+            <div class="staff-names">
+              <h5>Conrad Grayson</h5>
+              <p>CFO</p>
+            </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3 hoops-img">
+          <div class="col-12 col-md-4 col-lg-3 hoops-img staff-member">
             <img
               src="assets/images/head-of-ops.jpg"
               alt="Image of the Head of Operations"
               class="staff-portrait"
             />
+            <div class="staff-names">
+              <h5>Aiden Mathis</h5>
+              <p>Head of Operations</p>
+            </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3 hoaacc-img">
+          <div class="col-12 col-md-4 col-lg-3 hoaacc-img staff-member">
             <img
               src="assets/images/head-of-accounts.jpeg"
               alt="Image of the Head of Accounts"
               class="staff-portrait"
             />
+            <div class="staff-names">
+              <h5>Emily Thorne</h5>
+              <p>Head of Accounts</p>
+            </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3 hoacc-man-ing">
+          <div class="col-12 col-md-4 col-lg-3 hoacc-man-ing staff-member">
             <img
               src="assets/images/head-of-account-managment.jpeg"
               alt="Image of the Head of Account Management"
               class="staff-portrait"
             />
+            <div class="staff-names">
+              <h5>Ashley Davenport</h5>
+              <p>Head of Account Management</p>
+            </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3 hocom">
+          <div class="col-12 col-md-4 col-lg-3 hocom staff-member">
             <img
               src="assets/images/head-of-commerrcials.jpeg"
               alt="Image of the Head of Commercials"
               class="staff-portrait"
             />
+            <div class="staff-names">
+              <h5>David Clark</h5>
+              <p>Head of Commercials</p>
+            </div>
           </div>
         </div>
       </div>
